# strategies

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.rag/: _RAG.md  pipelines.md
.rag/arch/: C2_container.md  C3_component.md  C4_code.md
.rag/meta/: build_targets.md  claude_card.md  cmake_summary.md
.rag/test_params/: antenna_fft_AllMaximaPipelineROCm.md  dsp_spectrum_AllMaximaPipelineROCm.md  dsp_stats_StatisticsProcessor.md  dsp_strategies_AntennaProcessor.md  dsp_strategies_AntennaProcessorTest.md  dsp_strategies_AntennaProcessor_v1.md  dsp_strategies_Pipeline.md  dsp_strategies_PipelineBuilder.md  dsp_strategies_PipelineStepBase.md  dsp_strategies_WeightGenerator.md  statistics_StatisticsProcessor.md  strategies_AntennaProcessor.md  strategies_AntennaProcessorTest.md  strategies_AntennaProcessor_v1.md  strategies_Pipeline.md  strategies_PipelineBuilder.md  strategies_PipelineStepBase.md  strategies_WeightGenerator.md
.rag/use_cases/: base_strategy.md  debug_steps.md  python__strategies.md  strategies_benchmark_streams.md  strategies_pipeline.md  strategies_step_profiling.md
Doc/: API.md  AP_C1_SystemContext.md  AP_C2_Container.md  AP_C3_Component.md  AP_C4_Code.md  AP_INDEX.md  AP_Seq.md  Farrow_Pipeline.md  Full.md  Patterns.md  Quick.md  checkpoint_C1_C4_reports.md
cmake/: DspStrategiesConfig.cmake.in  fetch_deps.cmake  version.cmake
include/dsp/strategies/: antenna_processor.hpp  antenna_processor_test.hpp  antenna_processor_v1.hpp  i_pipeline_step.hpp  pipeline.hpp  pipeline_builder.hpp  pipeline_context.hpp  result_types.hpp  strategies_float_api.hpp  weight_generator.hpp
include/dsp/strategies/checkpoint/: null_checkpoint_save.hpp
include/dsp/strategies/config/: antenna_processor_config.hpp  post_fft_scenario_mode.hpp  statistics_set.hpp
include/dsp/strategies/interfaces/: i_checkpoint_save.hpp  i_post_fft_scenario.hpp
include/dsp/strategies/kernels/: strategies_kernels_rocm.hpp
include/dsp/strategies/steps/: all_maxima_step.hpp  debug_stats_step.hpp  gemm_step.hpp  minmax_step.hpp  one_max_step.hpp  window_fft_step.hpp
include/strategies/: antenna_processor.hpp  antenna_processor_test.hpp  antenna_processor_v1.hpp  i_pipeline_step.hpp  pipeline.hpp  pipeline_builder.hpp  pipeline_context.hpp  result_types.hpp  strategies_float_api.hpp  weight_generator.hpp
include/strategies/checkpoint/: null_checkpoint_save.hpp
include/strategies/config/: antenna_processor_config.hpp  post_fft_scenario_mode.hpp  statistics_set.hpp
include/strategies/interfaces/: i_checkpoint_save.hpp  i_post_fft_scenario.hpp
include/strategies/kernels/: strategies_kernels_rocm.hpp
include/strategies/steps/: all_maxima_step.hpp  debug_stats_step.hpp  gemm_step.hpp  minmax_step.hpp  one_max_step.hpp  window_fft_step.hpp
modules/fft_func/kernels/: all_maxima_kernels.cl  manifest.json
modules/fft_func/kernels/gfx1201/: C2MP_kernels.cl  manifest.json
modules/signal_generators/kernels/gfx1201/: FormSignal_kernels.cl  manifest.json
modules/statistics/kernels/gfx1201/: Statistics_kernels.cl  manifest.json
modules/strategies/kernels/gfx1201/: Strategies_kernels.cl  manifest.json
python/: CMakeLists.txt  dsp_strategies_module.cpp  py_helpers.hpp  py_strategies_rocm.hpp  t_strategies.py  test_strategies.py
src/strategies/: CMakeLists.txt  antenna_processor_v1.cpp  strategies_float_api.cpp  weight_generator.cpp
src/strategies/include/: antenna_processor.hpp  antenna_processor_v1.hpp  i_pipeline_step.hpp  pipeline_builder.hpp  result_types.hpp
src/strategies/include/checkpoint/: null_checkpoint_save.hpp
src/strategies/include/config/: post_fft_scenario_mode.hpp
src/strategies/include/interfaces/: i_checkpoint_save.hpp  i_post_fft_scenario.hpp
src/strategies/include/steps/: all_maxima_step.hpp  gemm_step.hpp
src/strategies/kernels/: manifest.json
src/strategies/src/: antenna_processor_v1.cpp  strategies_float_api.cpp  weight_generator.cpp
src/strategies/tests/: all_test.hpp  antenna_test_params.hpp  debug_step_test.hpp  i_signal_strategy.hpp  signal_strategies.hpp  signal_strategy_factory.hpp  strategies_profiling_benchmark.hpp
tests/: CMakeLists.txt  README.md  all_test.hpp  antenna_test_params.hpp  base_strategy_test.hpp  debug_step_test.hpp  i_signal_strategy.hpp  main.cpp  signal_strategies.hpp  signal_strategy_factory.hpp  strategies_profiling_benchmark.hpp  strategy_test_base.hpp  test_base_strategy.hpp  test_debug_steps.hpp  test_strategies_benchmark_streams.hpp  test_strategies_pipeline.hpp  test_strategies_step_profiling.hpp  timing_per_step_test.hpp
